@startuml

class tournament {
    id : int
    uuid : String
    name : String
    date_tournament : Date
    season : String
    place : String
}

class team {
    id : int
    uuid : String
    name : String
    city : String
    sex : String
    county : int
}

class player {
    id : int
    uuid : String
    lastname : String
    firstname : String
    birthday : Date
    sex : String
    num : int
}

class group {
    id : int
    uuid : String
    name : String
    type : String
    completed : boolean
    id_tournament : int
}
tournament "0" -- "n" group

class game {
    id : int
    uuid : String
    court : String
    hour : int
    ended : boolean
    id_winningteam : int
    id_group : int
}
team "1" -- "1" game
group "0" -- "n" game

class tournament_team {
    id_tournament : int
    id_team : int
}
tournament "0" -- "n" tournament_team
team "0" -- "n" tournament_team

class team_player {
    id_team : int
    id_player : int
}
team "0" -- "n" team_player
player "0" -- "n" team_player

class team_group {
    id_team int
    id_group int
    points int
    pointsFor int
    pointsAgainst int
}
team "0" -- "n" team_group
group "0" -- "n" team_group

class team_game {
    id_team int
    id_game int
    points int
}
team "0" -- "n" team_game
game "0" -- "n" team_game

class player_game {
    id_player int
    id_game int
    points int
}
player "0" -- "n" player_game
game "0" -- "n" player_game

@enduml
